# Camstream-2

./: .gitignore  BUILD_FROM_SCRATCH.md  Cargo.toml  LICENSE  QUICK_START.md  README.md  TROUBLESHOOTING.md  config.py  fastvlm_analyzer.py  live_fastvlm.py  live_fastvlm_enhanced.py  pyproject.toml  requirements.txt  rust_camera_cli.py  setup.sh  test_cam.py  test_camera.py  test_mac_camera.py  test_setup.py
.github/workflows/: CI.yml
src/: lib.rs  main.rs  main_simple.rs
